# excel

./: .env.example  .gitignore  BENCHMARK.md  Dockerfile  README.md  app.py  asset_routes.py  backend.py  base_elementar_automation.py  base_formula_policy.py  base_reference_routes.py  base_routes.py  capability_backend.py  collaboration_routes.py  elementar_automation_routes.py  elementar_automation_values.py  elementar_realtime_delivery.py  elementar_routes.py  files_routes.py  github_connector.py  github_oauth.py  github_sites.py  package.json  performance_cache.py  projects_routes.py  recovery_routes.py  render.yaml  requirements.txt  roles_routes.py  snapshot_routes.py  telemetry_routes.py  test_time_routes.py  test_time_unlimited.py  treated_base_formula_routes.py  treated_base_routes.py  workbook_routes.py
.instant_patch/: apply_instant_load_fix.py.gz.b64
.phase/: apply_dynamic_arrays.py  apply_range_index.py  apply_sparse_range_runtime.py  apply_wasm_business_ir.py.gz.b64  apply_wasm_business_ir.py.gz.b64.00  apply_wasm_business_ir.py.gz.b64.01  apply_wasm_business_ir.py.gz.b64.02  apply_wasm_business_ir.py.gz.b64.03  fix_range_index_tests.py  fix_sparse_applicator.py  fix_sparse_compile.py  update_abi4_docs.py.gz.b64.00  update_abi4_docs.py.gz.b64.01  update_abi4_docs.py.gz.b64.02  update_dynamic_arrays_docs.py  update_sparse_range_docs.py
.rust_source/: lib.rs.gz.b64.00  lib.rs.gz.b64.01  lib.rs.gz.b64.02  lib.rs.gz.b64.03
docs/: TEST_TIME.md  (+14 more)
wasm-engine/: Cargo.toml  README.md
wasm-engine/src/: lib.rs  workbook.rs
wasm-engine/src/workbook/: sparse.rs
(+168 files in other folders)
