[package]
name = "superexcel-wasm-engine"
version = "0.1.0"
edition = "2021"
description = "Experimental ABI prototype for a future Super Excel Rust/Wasm calculation engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
